fix styling bug: aside element overflows the screen

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,3 @@
-.side {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  border: 1px solid black;
-}
-
 h1 {
   margin-top: 2em;
   text-align: center;
